// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HearingSlotsRowComponent should render 1`] = `
<tr
  errors={[Function EventEmitter_]}
  hearingSlot={[Function Function]}
  rotaBusinessTypesByCode={[Function Object]}
  selectedHearingSlotTimestamp={[Function EventEmitter_]}
  selectedHearingSlotTimestamps={[Function Function]}
  selectedTimestampModel={[Function Function]}
  selectionMode={[Function String]}
>
  <td
    class="govuk-table__cell"
    data-test-id="sessionDate"
    pdk-table-cell=""
  >
    <div
      class="session-date-cell"
    >
      <span>
        25-03-2025
      </span>
    </div>
  </td><td
    class="govuk-table__cell"
    colspan="4"
    pdk-table-cell=""
  >
    <table
      class="govuk-table"
      pdk-table=""
    >
      <tr
        class="govuk-table__row"
        pdk-table-row=""
      >
        <td
          class="width-180-px govuk-!-padding-top-0 govuk-table__cell"
          pdk-padding-top="0"
          pdk-table-cell=""
        >
          <span
            data-test-id="courtHouseName"
          >
          </span>
        </td>
        <td
          class="width-130-px govuk-!-padding-top-0 govuk-table__cell"
          data-test-id="businessType"
          pdk-padding-top="0"
          pdk-table-cell=""
        >
          <abbr>
          </abbr>
        </td>
        <td
          class="width-210-px govuk-!-padding-top-0 govuk-table__cell"
          data-test-id="courtSession"
          pdk-padding-top="0"
          pdk-table-cell=""
        >
          <span>
            AM
          </span>
        </td>
        <td
          class="width-100-px govuk-!-padding-top-0 govuk-table__cell"
          data-test-id="units"
          pdk-padding-top="0"
          pdk-table-cell=""
        >
          <ol
            class="govuk-!-margin-bottom-0 govuk-list"
            pdk-list=""
            pdk-margin-bottom="0"
          >
            <li>
              0
            </li>
          </ol>
        </td>
      </tr>
    </table>
  </td><td
    class="govuk-table__cell"
    data-test-id="booked"
    pdk-table-cell=""
  >
    <ol
      class="govuk-!-margin-bottom-0 govuk-list"
      pdk-list=""
      pdk-margin-bottom="0"
    >
      <li>
      </li>
    </ol>
  </td>
</tr>
`;

exports[`HearingSlotsRowComponent should render when hearing slot is draft 1`] = `
<tr
  errors={[Function EventEmitter_]}
  hearingSlot={[Function Function]}
  rotaBusinessTypesByCode={[Function Object]}
  selectedHearingSlotTimestamp={[Function EventEmitter_]}
  selectedHearingSlotTimestamps={[Function Function]}
  selectedTimestampModel={[Function Function]}
  selectionMode={[Function String]}
>
  <td
    class="govuk-table__cell"
    data-test-id="sessionDate"
    pdk-table-cell=""
  >
    <div
      class="session-date-cell"
    >
      <span>
        25-03-2025
      </span>
      <pdk-tag
        class="draft-session-tag govuk-!-margin-top-2"
        condensed=""
        data-test-id="draftTag"
        pdk-margin-top="2"
      >
        <div
          class="govuk-tag govuk-tag--grey pdk-tag--condensed"
        >
          Draft
        </div>
      </pdk-tag>
    </div>
  </td><td
    class="govuk-table__cell"
    colspan="4"
    pdk-table-cell=""
  >
    <table
      class="govuk-table"
      pdk-table=""
    >
      <tr
        class="govuk-table__row"
        pdk-table-row=""
      >
        <td
          class="width-180-px govuk-!-padding-top-0 govuk-table__cell"
          pdk-padding-top="0"
          pdk-table-cell=""
        >
          <span
            data-test-id="courtHouseName"
          >
            Luton Crown Court
          </span>
        </td>
        <td
          class="width-130-px govuk-!-padding-top-0 govuk-table__cell"
          data-test-id="businessType"
          pdk-padding-top="0"
          pdk-table-cell=""
        >
          <abbr>
          </abbr>
        </td>
        <td
          class="width-210-px govuk-!-padding-top-0 govuk-table__cell"
          data-test-id="courtSession"
          pdk-padding-top="0"
          pdk-table-cell=""
        >
          <span>
            AM
          </span>
        </td>
        <td
          class="width-100-px govuk-!-padding-top-0 govuk-table__cell"
          data-test-id="units"
          pdk-padding-top="0"
          pdk-table-cell=""
        >
          <ol
            class="govuk-!-margin-bottom-0 govuk-list"
            pdk-list=""
            pdk-margin-bottom="0"
          >
            <li>
              0
            </li>
          </ol>
        </td>
      </tr>
    </table>
  </td><td
    class="govuk-table__cell"
    data-test-id="booked"
    pdk-table-cell=""
  >
    <ol
      class="govuk-!-margin-bottom-0 govuk-list"
      pdk-list=""
      pdk-margin-bottom="0"
    >
      <li>
      </li>
    </ol>
  </td>
</tr>
`;
